Stylesheet/emote/tag updates 2018-05-02

--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -211,12 +211,12 @@ color: #FFF !important
      height: 16px;
 }
 
-.flair-wine { background-position: 0px -16px }
-.flair-cocktail { background-position: 0px -32px }
-.flair-beer1 { background-position: 0px -48px }
-.flair-liquor1 { background-position: 0px -64px }
-.flair-liquor2 { background-position: 0px -80px }
-.flair-beer2 { background-position: 0px -96px }
+.flair-wine { background-position: 0px -16px; color: transparent }
+.flair-cocktail { background-position: 0px -32px; color: transparent }
+.flair-beer1 { background-position: 0px -48px; color: transparent }
+.flair-liquor1 { background-position: 0px -64px; color: transparent }
+.flair-liquor2 { background-position: 0px -80px; color: transparent }
+.flair-beer2 { background-position: 0px -96px; color: transparent }
 
 
 /***************************/
