--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -171,9 +171,9 @@ background: url(%%horsewife%%) center center no-repeat transparent;
 /*Subscriber Name Replace*/
 div.titlebox span.word {display:none}
 
-div.titlebox .subscribers span.number:after {content:" Sillies"}
+div.titlebox .subscribers span.number:after {content:" Students"}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " Numpties" }
+div.titlebox p.users-online span.number:after { content: " Studying" }
 div.titlebox p.users-online span.word { display: none }
 
 /*modifications*/
@@ -228,14 +228,14 @@ div.titlebox p.users-online span.word { display: none }
 {
     display:inline-block;
     float:right;
-    background:url(%%fmotes%%);
+    background:url(%%emotes%%);
     width:70px;
     height:70px;
     margin-top:-45px;
     margin-left:5px;
     margin-bottom:0px;
     margin-right:-45px;
-    background-position: -300% -800%; /*To select emote table position. Increments of -100%.*/
+    background-position: -200% -600%; /*To select emote table position. Increments of -100%.*/
     transform:scaleX(1); /*To reverse the hat. '1' is normal, '-1' is reversed.*/
 }
 
@@ -519,10 +519,10 @@ a[href|="/ohcomeon"],a[href|="/sbcomeon"],a[href|="/a06"],a[href|="/rohcomeon"],
 a[href|="/raritypaper"],a[href|="/raritynews"],a[href|="/a07"],a[href|="/rraritypaper"],a[href|="/rraritynews"],a[href|="/ra07"],a[href|="/ajwut"],a[href|="/b07"],a[href|="/rajwut"],a[href|="/rb07"],a[href|="/pinkamina"],a[href|="/c07"],a[href|="/rpinkamina"],a[href|="/rc07"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/e07"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/re07"],a[href|="/f07"],a[href|="/ajcry"],a[href|="/rf07"],a[href|="/rajcry"],a[href|="/flutterbrow"],a[href|="/g07"],a[href|="/rflutterbrow"],a[href|="/rg07"],.side .md table tr:nth-of-type(15) td:nth-of-type(2):after
 {background-position:0 -700%}
 
-a[href|="/twiright"],a[href|="/satistwied"],a[href|="/a08"],a[href|="/rtwiright"],a[href|="/rsatistwied"],a[href|="/ra08"],a[href|="/abwut"],a[href|="/b08"],a[href|="/rabwut"],a[href|="/rb08"],a[href|="/scootaloo"],a[href|="/c08"],a[href|="/rscootaloo"],a[href|="/rc08"],a[href|="/twiponder"],a[href|="/e08"],a[href|="/rtwiponder"],a[href|="/re08"],a[href|="/f08"],a[href|="/rarityeww"],a[href|="/rf08"], a[href|="/rrarityeww"],.side .md table tr:nth-of-type(17) td:nth-of-type(2):after
+a[href|="/twiright"],a[href|="/satistwied"],a[href|="/a08"],a[href|="/rtwiright"],a[href|="/rsatistwied"],a[href|="/ra08"],a[href|="/abwut"],a[href|="/b08"],a[href|="/rabwut"],a[href|="/rb08"],a[href|="/scootaloo"],a[href|="/c08"],a[href|="/rscootaloo"],a[href|="/rc08"],a[href|="/twiponder"],a[href|="/e08"],a[href|="/rtwiponder"],a[href|="/re08"],a[href|="/f08"],a[href|="/rarityeww"],a[href|="/rf08"], a[href|="/rrarityeww"],a[href|="/celestiahurt"],a[href|="/g08"],a[href|="/rcelestiahurt"],a[href|="/rg08"],.side .md table tr:nth-of-type(17) td:nth-of-type(2):after
 {background-position:0 -800%}
 
-a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/a09"],a[href|="/rshiningarmor"],a[href|="/rshiningarmour"],a[href|="/ra09"],a[href|="/rarityjudge"],a[href|="/b09"],a[href|="/rrarityjudge"],a[href|="/rb09"],a[href|="/allmybits"],a[href|="/c09"],a[href|="/rallmybits"],a[href|="/rc09"],a[href|="/gilda"],a[href|="/e09"],a[href|="/rgilda"],a[href|="/re09"],a[href|="/f09"], a[href|="/flutterkay"], a[href|="/flutter:I"], a[href|="/pokershy"],a[href|="/rf09"], a[href|="/rflutterkay"], a[href|="/rflutter:I"], a[href|="/rpokershy"],.side .md table tr:nth-of-type(19) td:nth-of-type(2):after
+a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/a09"],a[href|="/rshiningarmor"],a[href|="/rshiningarmour"],a[href|="/ra09"],a[href|="/rarityjudge"],a[href|="/b09"],a[href|="/rrarityjudge"],a[href|="/rb09"],a[href|="/allmybits"],a[href|="/c09"],a[href|="/rallmybits"],a[href|="/rc09"],a[href|="/gilda"],a[href|="/e09"],a[href|="/rgilda"],a[href|="/re09"],a[href|="/f09"], a[href|="/flutterkay"], a[href|="/flutter:I"], a[href|="/pokershy"],a[href|="/rf09"], a[href|="/rflutterkay"], a[href|="/rflutter:I"], a[href|="/rpokershy"],a[href|="/sgconcern"],a[href|="/starlightconcern"],a[href|="/g09"],a[href|="/rsgconcern"],a[href|="/rstarlightconcern"],a[href|="/rg09"],.side .md table tr:nth-of-type(19) td:nth-of-type(2):after
 {background-position:0 -900%}
 
 a[href|="/priceless"],a[href|="/a10"],a[href|="/rpriceless"],a[href|="/ra10"],a[href|="/ppboring"],a[href|="/b10"],a[href|="/rppboring"],a[href|="/rb10"],a[href|="/rdhappy"],a[href|="/c10"],a[href|="/rrdhappy"],a[href|="/rc10"],a[href|="/rdhuh"],a[href|="/e10"],a[href|="/rrdhuh"],a[href|="/re10"],a[href|="/f10"], a[href|="/starlightrage"],a[href|="/rf10"], a[href|="/rstarlightrage"],a[href|="/sbfocus"],a[href|="/g10"],a[href|="/rsbfocus"],a[href|="/rg10"],a[href|="/pl10"],a[href|="/rpl10"],a[href|="/twidur"],a[href|="/twidurr"],a[href|="/rtwidur"],a[href|="/rtwidurr"],.side .md table tr:nth-of-type(1) td:nth-of-type(3):after
@@ -1005,21 +1005,25 @@ padding: 0
 .flair-shiningarmor {background-position: -100% -1300%}
 .flair-filthyrich {background-position: -200% -1300%}
 .flair-hoitytoity {background-position: -300% -1300%}
+.flair-fishbird {background-position: -400% -1300%}
 
 .flair-cloudchaser {background-position: 0% -1400%}
 .flair-flitter {background-position: -100% -1400%}
 .flair-lily {background-position: -200% -1400%}
 .flair-grannysmith {background-position: -300% -1400%}
+.flair-gal {background-position: -400% -1400%}
 
 .flair-daisy {background-position: 0% -1500%}
 .flair-chrysalis {background-position: -100% -1500%}
 .flair-lotus {background-position: -200% -1500%}
 .flair-aloe {background-position: -300% -1500%}
+.flair-luvbug {background-position: -400% -1500%}
 
 .flair-drstable {background-position: 0% -1600%}
 .flair-sewnsow {background-position: -100% -1600%}
 .flair-spitfire {background-position: -200% -1600%}
 .flair-mayor {background-position: -300% -1600%}
+.flair-newspike {background-position: -400% -1600%}
 
 .flair-surprise {background-position: 0% -1700%}
 .flair-maud {background-position: -100% -1700%}
@@ -1031,10 +1035,12 @@ padding: 0
 .flair-coco {background-position: -100% -1800%}
 .flair-discord {background-position: -200% -1800%} /*Cutie mark from S4 Finale, by /u/RAGErER */
 .flair-soarin {background-position: -300% -1800%}
+.flair-yuna {background-position: -400% -1800%}
 
 .flair-lightningdust {background-position: 0% -1900%}
 .flair-cheesesandwich {background-position: -100% -1900%}
 .flair-apathia {background-position: -300% -1900%} /* /u/Jibodeah fixed it to be readable */
+.flair-turtles {background-position: -400% -1900%}
 
 .flair-discentia {background-position: 0% -2000%}
 .flair-karma {background-position: -100% -2000%}
@@ -1111,7 +1117,7 @@ a.author[href$="UserNameHere"]:before {font-size:10px!important; visibility:visi
 /* Hide /u/Pinkie_Pie in the Mod list
  * Dangerous index based because the <li> elements have no classes... see also https://stackoverflow.com/a/1014958/7891226
  */
-.sidecontentbox > ul.content > li:nth-child(7) { display: none }
+.sidecontentbox > ul.content > li:nth-child(6) { display: none }
 
 /*Subreddit Styling*/
 #header-img {margin: 2px 0 0 0}
