--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -451,7 +451,7 @@ a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[h
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70d 'motes */
-a[href|="/cocoscared"], a[href|="/rdwuthoof"], a[href|="/sunsetwhat"], a[href|="/sunsetregret"]
+a[href|="/cocoscared"], a[href|="/rdwuthoof"], a[href|="/sunsetwhat"], a[href|="/sunsetregret"], a[href|="/whatsthat"], a[href|="/cadancechat"], a[href|="/winkyjack"]
 {background-image:url(%%70x70d%%);width:70px;height:70px;display:block;float:left}
 
 /* 100x100a 'motes. */
@@ -471,7 +471,7 @@ a[href|="/vinylscrewyou"], a[href|="/browniewat"], a[href|="/rainbowtwiglee"], a
 {background-image:url(%%100x100d%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100e 'motes */
-a[href|="/raritythink"], a[href|="/rescuegrump"], a[href|="/twiperplexed"], a[href|="/aurrylove"], a[href|="/aurrywink"], a[href|="/humantrixiedevious"], a[href|="/humantrixiefurious"], a[href|="/humantrixieglare"], a[href|="/humantrixieglee"], a[href|="/humantrixiemaniacal"], a[href|="/humantrixienotamused"], a[href|="/humantrixierage"], a[href|="/humantrixieright"], a[href|="/humantrixiesad"], a[href|="/humantrixieupset"], a[href|="/concern"], a[href|="/cinderflirt"]
+a[href|="/raritythink"], a[href|="/rescuegrump"], a[href|="/twiperplexed"], a[href|="/aurrylove"], a[href|="/aurrywink"], a[href|="/humantrixiedevious"], a[href|="/humantrixiefurious"], a[href|="/humantrixieglare"], a[href|="/humantrixieglee"], a[href|="/humantrixiemaniacal"], a[href|="/humantrixienotamused"], a[href|="/humantrixierage"], a[href|="/humantrixieright"], a[href|="/humantrixiesad"], a[href|="/humantrixieupset"], a[href|="/concern"], a[href|="/cinderflirt"], a[href|="/thicc"], a[href|="/celestiablush1"], a[href|="/starlightthinking"], a[href|="/sunsetgrump"], a[href|="/pinkaboo"]
 {background-image:url(%%100x100e%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -495,7 +495,7 @@ a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"], a[href|="/shy
 {background-image:url(%%150x150e%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150f 'motes */
-a[href|="/twitation"], a[href|="/yourexistenceannoysme"], a[href|="/apfle"], a[href|="/derpystop"], a[href|="/abstop"], a[href|="/octilewd"], a[href|="/fingerguns"], a[href|="/thatswhereyourewrongkiddo"], a[href|="/twiyoudontsay"], a[href|="/thatslewd"], a[href|="/twiapathy"], a[href|="/cheerileecanteven"], a[href|="/adagiothisidiot"], a[href|="/ddwhatsup"]
+a[href|="/twitation"], a[href|="/yourexistenceannoysme"], a[href|="/apfle"], a[href|="/derpystop"], a[href|="/abstop"], a[href|="/octilewd"], a[href|="/fingerguns"], a[href|="/thatswhereyourewrongkiddo"], a[href|="/twiyoudontsay"], a[href|="/thatslewd"], a[href|="/twiapathy"], a[href|="/cheerileecanteven"], a[href|="/adagiothisidiot"], a[href|="/ddwhatsup"], a[href|="/twinani"]
 {background-image:url(%%150x150f%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -503,7 +503,7 @@ a[href|="/regret"], a[href|="/pinkiemail"], a[href|="/obsessivetrixie"], a[href|
 {background-image:url(%%200x200a%%);width:200px;height:200px;display:block;float:left;}
 
 /* 200x200b 'motes. */
-a[href|="/rariluna"], a[href|="/superalicorn"], a[href|="/sursilly"], a[href|="/fluttersnake"], a[href|="/zecoracarry"], a[href|="/sunsetmaid"], a[href|="/sweepsweepsweep"], a[href|="/faustilicious"], a[href|="/waifuwarrior"], a[href|="/fillyanonhonk"]
+a[href|="/rariluna"], a[href|="/superalicorn"], a[href|="/sursilly"], a[href|="/fluttersnake"], a[href|="/zecoracarry"], a[href|="/sunsetmaid"], a[href|="/sweepsweepsweep"], a[href|="/faustilicious"], a[href|="/waifuwarrior"], a[href|="/fillyanonhonk"], a[href|="/chryslewd"], a[href|="/benice"]
 {background-image:url(%%200x200b%%);width:200px;height:200px;display:block;float:left;}
 
 /* 250x250a 'motes. */
@@ -580,7 +580,7 @@ a[href|="/celestiawat"], a[href|="/hellodarkness"], a[href|="/discordross"], a[h
 {background-image:url(%%misfitsp%%);display:block;float:left;}
 
 /* Misfits q */
-a[href|="/abapproved"], a[href|="/sbapproved"], a[href|="/scootapproved"], a[href|="/abwave"], a[href|="/celobey"], a[href|="/spikehighfive"], a[href|="/splat"], a[href|="/canttouchthis"], a[href="/rdyoudoin"], a[href|="/nolewdzone"], a[href|="/annoyedlyra"], a[href|="/lyrathink"]
+a[href|="/abapproved"], a[href|="/sbapproved"], a[href|="/scootapproved"], a[href|="/abwave"], a[href|="/celobey"], a[href|="/spikehighfive"], a[href|="/splat"], a[href|="/canttouchthis"], a[href="/rdyoudoin"], a[href|="/nolewdzone"], a[href|="/annoyedlyra"], a[href|="/lyrathink"], a[href|="/trixiecallsbs"], a[href|="/icallbs"], a[href|="/lyrapeace"], a[href|="/karmahugskarma"], a[href|="/sunsetnotsure"], a[href|="/cinderpointypony"], a[href|="/hugtime"], a[href|="/lewdzone"]
 {background-image:url(%%misfitsq%%);display:block;float:left;}
 
 /*
@@ -604,15 +604,15 @@ a[href|="/twihappycry"], a[href|="/nightmaresparkle"], a[href|="/nomakeup"], a[h
 {background-position: 0 -100%;}
 
 /* Grid pos 1,1 'motes */
-a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/grannyglad"], a[href|="/magnemites"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/scootasquee"], a[href|="/greatandpowerfuldinky"], a[href|="/ninetales"], a[href|="/zecoracarry"], a[href|="/twifascinating"], a[href|="/cadsad"], a[href|="/discordnorespect"], a[href|="/toughcrowd"], a[href|="/changelingsad"], a[href|="/chrysathis"], a[href|="/abstop"], a[href|="/aurrywink"]
+a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/grannyglad"], a[href|="/magnemites"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/scootasquee"], a[href|="/greatandpowerfuldinky"], a[href|="/ninetales"], a[href|="/zecoracarry"], a[href|="/twifascinating"], a[href|="/cadsad"], a[href|="/discordnorespect"], a[href|="/toughcrowd"], a[href|="/changelingsad"], a[href|="/chrysathis"], a[href|="/abstop"], a[href|="/aurrywink"], a[href|="/whatsthat"]
 {background-position: -100% -100%;}
 
 /* Grid pos 2,1 'motes */
-a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"], a[href|="/fillycoco"], a[href|="/redheart"], a[href|="/venasaur"], a[href|="/sunsetjoy"], a[href|="/sassybloom"], a[href|="/necklestia"], a[href|="/sunsetmaid"], a[href|="/sadtwilight"], a[href|="/discordsmug"], a[href|="/octilewd"], a[href|="/humantrixiedevious"]
+a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"], a[href|="/fillycoco"], a[href|="/redheart"], a[href|="/venasaur"], a[href|="/sunsetjoy"], a[href|="/sassybloom"], a[href|="/necklestia"], a[href|="/sunsetmaid"], a[href|="/sadtwilight"], a[href|="/discordsmug"], a[href|="/octilewd"], a[href|="/humantrixiedevious"], a[href|="/cadancechat"]
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
-a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/cybermedic"], a[href|="/sweetiebloom"], a[href|="/karmahappy2"], a[href|="/rdhello"], a[href|="/macship"], a[href|="/sadtwilight2"], a[href|="/discrazy"], a[href|="/sweepsweepsweep"], a[href|="/fingerguns"], a[href|="/thatswhereyourewrongkiddo"], a[href|="/humantrixiefurious"]
+a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/cybermedic"], a[href|="/sweetiebloom"], a[href|="/karmahappy2"], a[href|="/rdhello"], a[href|="/macship"], a[href|="/sadtwilight2"], a[href|="/discrazy"], a[href|="/sweepsweepsweep"], a[href|="/fingerguns"], a[href|="/thatswhereyourewrongkiddo"], a[href|="/humantrixiefurious"], a[href|="/winkyjack"]
 {background-position: 0 -200%;}
 
 /* Grid pos 1,2 'motes */
@@ -628,19 +628,19 @@ a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rd
 {background-position: 0% -300%;}
 
 /* Grid pos 1,3 'motes */
-a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"], a[href|="/flufflepirate"], a[href|="/karmalook"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/daringjoy"], a[href|="/lyramad"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/whatismylife"], a[href|="/cheerileecanteven"], a[href|="/humantrixienotamused"]
+a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"], a[href|="/flufflepirate"], a[href|="/karmalook"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/daringjoy"], a[href|="/lyramad"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/whatismylife"], a[href|="/cheerileecanteven"], a[href|="/humantrixienotamused"], a[href|="/chryslewd"]
 {background-position: -100% -300%;}
 
 /* Grid pos 2,3 'motes */
-a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocohappy"], a[href|="/nerdaj"], a[href|="/50sderpy"], a[href|="/sweetiebitch"], a[href|="/derpydress"], a[href|="/shittypone"], a[href|="/apathiaeyebrow"], a[href|="/trixieawkward"], a[href|="/kittenbloom"], a[href|="/disreally"], a[href|="/fsfu"], a[href|="/adagiothisidiot"], a[href|="/humantrixierage"]
+a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocohappy"], a[href|="/nerdaj"], a[href|="/50sderpy"], a[href|="/sweetiebitch"], a[href|="/derpydress"], a[href|="/shittypone"], a[href|="/apathiaeyebrow"], a[href|="/trixieawkward"], a[href|="/kittenbloom"], a[href|="/disreally"], a[href|="/fsfu"], a[href|="/adagiothisidiot"], a[href|="/humantrixierage"], a[href|="/chryslewd"]:hover
 {background-position: -200% -300%;}
 
 /* Grid pos 0,4 'motes */
-a[href|="/sombrarage"], a[href|="/sadshy"], a[href|="/cocosad"], a[href|="/nerdpinkamena"], a[href|="/raracheeks"], a[href|="/nothisisbait"], a[href|="/twipie"], a[href|="/discentiaangrysquint"], a[href|="/tgaptsundere"], a[href|="/mint"], a[href|="/ssshy"], a[href|="/ponk"], a[href|="/ddwhatsup"], a[href|="/humantrixieright"]
+a[href|="/sombrarage"], a[href|="/sadshy"], a[href|="/cocosad"], a[href|="/nerdpinkamena"], a[href|="/raracheeks"], a[href|="/nothisisbait"], a[href|="/twipie"], a[href|="/discentiaangrysquint"], a[href|="/tgaptsundere"], a[href|="/mint"], a[href|="/ssshy"], a[href|="/ponk"], a[href|="/ddwhatsup"], a[href|="/humantrixieright"], a[href|="/benice"]
 {background-position: 0 -400%;}
 
 /* Grid pos 1,4 'motes */
-a[href|="/gildaconfused"], a[href|="/grimfluff"], a[href|="/nerdrarity"], a[href|="/lunapersona"], a[href|="/everythingisbait"], a[href|="/zecoradust"], a[href|="/colgatebraces"], a[href|="/princesslenny"], a[href|="/crazyrainbowicorn"], a[href|="/ajangry"], a[href|="/nerdfleetfoot"], a[href|="/humantrixiesad"]
+a[href|="/gildaconfused"], a[href|="/grimfluff"], a[href|="/nerdrarity"], a[href|="/lunapersona"], a[href|="/everythingisbait"], a[href|="/zecoradust"], a[href|="/colgatebraces"], a[href|="/princesslenny"], a[href|="/crazyrainbowicorn"], a[href|="/ajangry"], a[href|="/nerdfleetfoot"], a[href|="/humantrixiesad"], a[href|="/twinani"]
 {background-position: -100% -400%;}
 
 /* Grid pos 2,4 'motes */
@@ -656,23 +656,23 @@ a[href|="/tiadisapproval"], a[href|="/nerdpie"], a[href|="/maudsmile"], a[href|=
 {background-position: -100% -500%;}
 
 /* Grid pos 2,5 'motes */
-a[href|="/nerdtwi"], a[href|="/dashsquint"], a[href|="/seapeeve"], a[href|="/scootabloom"], a[href|="/batcadance"], a[href|="/sbeestare"], a[href|="/daringcheeky"], a[href|="/trilbybelle"], a[href|="/fedorabelle"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/sunsetcrazy"]
+a[href|="/nerdtwi"], a[href|="/dashsquint"], a[href|="/seapeeve"], a[href|="/scootabloom"], a[href|="/batcadance"], a[href|="/sbeestare"], a[href|="/daringcheeky"], a[href|="/trilbybelle"], a[href|="/fedorabelle"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/sunsetcrazy"], a[href|="/thicc"]
 {background-position: -200% -500%;}
 
 /* Grid pos 0,6 'motes */
-a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/loveletter"], a[href|="/abra"], a[href|="/batvinyl"], a[href|="/karmasquint"], a[href|="/discordmad"], a[href|="/rarityspeechless"], a[href|="/ssawe"], a[href|="/raricatmallow"], a[href|="/raricatmellow"]
+a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/loveletter"], a[href|="/abra"], a[href|="/batvinyl"], a[href|="/karmasquint"], a[href|="/discordmad"], a[href|="/rarityspeechless"], a[href|="/ssawe"], a[href|="/raricatmallow"], a[href|="/raricatmellow"], a[href|="/celestiablush1"]
 {background-position: 0 -600%;}
 
 /* Grid pos 1,6 'motes */
-a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"], a[href|="/charizard"], a[href|="/christmaslyra"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/g4smooze"], a[href|="/rarityspeechless"]:hover, a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/twiscrunchwings"]
+a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"], a[href|="/charizard"], a[href|="/christmaslyra"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/g4smooze"], a[href|="/rarityspeechless"]:hover, a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/twiscrunchwings"], a[href|="/starlightthinking"]
 {background-position: -100% -600%;}
 
 /* Grid pos 2,6 'motes */
-a[href|="/deviousmac"], a[href|="/nerdsunset"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/tirekunamused"], a[href|="/zubat"], a[href|="/adultbelle"], a[href|="/trixiedafaq"], a[href|="/sadicecreamtwilight"], a[href|="/fleetfootohsnap"], a[href|="/flutterconfused"], a[href|="/trixiebag"]
+a[href|="/deviousmac"], a[href|="/nerdsunset"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/tirekunamused"], a[href|="/zubat"], a[href|="/adultbelle"], a[href|="/trixiedafaq"], a[href|="/sadicecreamtwilight"], a[href|="/fleetfootohsnap"], a[href|="/flutterconfused"], a[href|="/trixiebag"], a[href|="/sunsetgrump"]
 {background-position: -200% -600%;}
 
 /* Grid pos 0,7 'motes */
-a[href|="/zerofucks"], a[href|="/greaserspike"], a[href|="/rdtwipride"], a[href|="/rarityunamused"], a[href|="/wartortle"], a[href|="/scootapprove"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/abswear"], a[href|="/shopdotmov"], a[href|="/changelingmad"], a[href|="/twilightyoufool"], a[href|="/twilightscold"]
+a[href|="/zerofucks"], a[href|="/greaserspike"], a[href|="/rdtwipride"], a[href|="/rarityunamused"], a[href|="/wartortle"], a[href|="/scootapprove"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/abswear"], a[href|="/shopdotmov"], a[href|="/changelingmad"], a[href|="/twilightyoufool"], a[href|="/twilightscold"], a[href|="/pinkaboo"]
 {background-position: 0 -700%;}
 
 /* Grid pos 1,7 'motes */
@@ -873,6 +873,18 @@ overflow: hidden;
 }
 a[href|="/gravestone"]:hover, a[href|="/theydied"]:hover
 {text-decoration: none !important;}
+
+/* this isn't pony related why is this here */
+a[href|="/demod"] {font-size: 0}
+a[href|="/demod"]::before
+{
+    color: #50cb70;
+    cursor: text;
+    content: "(USER WAS DEMODDED FOR THIS POST)";
+    font-family: arial, helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 10pt;
+}
 
 /* Perplexity */
 a[href|="/twiperplexity"], a[href|="/dashperplexity"], a[href|="/rarityperplexity"], a[href|="/flutterperplexity"], a[href|="/ajperplexity"], a[href|="/pinkieperplexity"], a[href|="/surpriseperplexity"], a[href|="/derpyperplexity"], a[href|="/vinylperplexity"], a[href|="/scootperplexity"], a[href|="/applebloomperplexity"], a[href|="/sweetieperplexity"]
@@ -1229,7 +1241,7 @@ a[href|="/humantwiblush"] {width:96px;height:130px;background-position: -256px -
 a[href|="/dashplace"] {width:114px;height:180px;background-position: -352px -370px}
 a[href|="/tavibedhead"] {width:150px;height:134px;background-position: -466px -370px}
 a[href|="/ablurk"] {width:70px;height:55px;background-position: -256px -500px}
-a[href|="/abhmph"] {width:89px;height:120px;background-position: -356px -250px}
+a[href|="/abhmph"] {width:89px;height:120px;background-position: -357px -250px}
 a[href|="/abapproved"], a[href|="/sbapproved"], a[href|="/scootapproved"] {width:120px;height:120px}
 a[href|="/sbapproved"] {background-position: -120px 0}
 a[href|="/scootapproved"] {background-position: -240px 0}
@@ -1242,3 +1254,10 @@ a[href="/rdyoudoin"] {width:71px;height:100px;background-position: -547px 0}
 a[href|="/nolewdzone"] {width:122px;height:150px;background-position: -113px -120px}
 a[href|="/annoyedlyra"] {width:80px;height:150px;background-position: -235px -120px}
 a[href|="/lyrathink"] {width:101px;height:120px;background-position: -618px 0}
+a[href|="/trixiecallsbs"], a[href|="/icallbs"] {width:126px;height:150px;background-position: -315px -120px}
+a[href|="/lyrapeace"] {width:155px;height:200px;background-position: -263px -270px}
+a[href|="/karmahugskarma"] {width:167px;height:200px;background-position: -418px -270px}
+a[href|="/sunsetnotsure"] {width:116px;height:138px;background-position: -441px -100px}
+a[href|="/cinderpointypony"] {width:83px;height:100px;background-position: -719px 0}
+a[href|="/hugtime"] {width:181px;height:150px;background-position: -557px -120px}
+a[href|="/lewdzone"] {width:122px;height:150px;background-position: -738px -120px}
