--- a/source-css/coloratura.css
+++ b/source-css/coloratura.css
@@ -632,7 +632,7 @@ a[href|="/rarahint"], a[href|="/raradance"], a[href|="/lazyfillyrara"], a[href|=
   background-image: url(%%brara%%) !important;
 }
 
-a[href|="/fillyraraforte"], a[href|="/fillyraraooh"], a[href|="/humancountess"], a[href|="/fillyrara"], a[href|="/raraooh"] {
+a[href|="/fillyraraforte"], a[href|="/fillyraraooh"], a[href|="/humancountess"], a[href|="/fillyrara"], a[href|="/raraooh"], a[href|="/flowerrara"], a[href|="/cheekyrara"], a[href|="/drara"] {
   display: block;
   clear: none;
   float: left;
@@ -657,9 +657,9 @@ a[href|="/raramagic"], a[href|="/raradance"], a[href|="/fillyraraooh"], a[href|=
 a[href|="/thecountess"], a[href|="/lazyfillyrara"], a[href|="/humancountess"], a[href|="/raraselfie"] { background-position: -200% 0 }
 a[href|="/happyrara"], a[href|="/sparara"], a[href|="/fillyrara"], a[href|="/rarastrum"] { background-position: -300% 0 }
 a[href|="/rarasing"], a[href|="/raracarol"], a[href|="/raraooh"], a[href|="/rarashred"] { background-position: 0 -100% }
-a[href|="/sadrara"], a[href|="/asleeprara"], a[href|="/crystalrara"] { background-position: -100% -100% }
-a[href|="/svengallop"], a[href|="/countesspose"], a[href|="/indierockrara"] { background-position: -200% -100% }
-a[href|="/fillyrarasing"], a[href|="/winrara"], a[href|="/hiphoprara"] { background-position: -300% -100% }
+a[href|="/sadrara"], a[href|="/asleeprara"], a[href|="/crystalrara"], a[href|="/flowerrara"] { background-position: -100% -100% }
+a[href|="/svengallop"], a[href|="/countesspose"], a[href|="/indierockrara"], a[href|="/cheekyrara"] { background-position: -200% -100% }
+a[href|="/fillyrarasing"], a[href|="/winrara"], a[href|="/hiphoprara"], a[href|="/drara"] { background-position: -300% -100% }
 a[href|="/rarashock"], a[href|="/countesswink"], a[href|="/rarasit"] { background-position: 0 -200% }
 a[href|="/countempt"], a[href|="/countesstoss"], a[href|="/rarapiano"] { background-position: -100% -200% }
 a[href|="/countesslook"], a[href|="/countessgrin"], a[href|="/rarapiehug"] { background-position: -200% -200% }
