--- a/source-css/equestriagirls.css
+++ b/source-css/equestriagirls.css
@@ -1475,7 +1475,7 @@ a[href|="/egb09"],a[href|="/pinkiederp"] {background-position: 0 -630px}
 a[href|="/egb19"],a[href|="/shutupanddance"] {background-position: -70px -630px}
 a[href|="/egb29"],a[href|="/intriguing"] {background-position: -140px -630px}
 
-a[href|="/egc00"],a[href|="/twilightrocks"],a[href|="/egc10"],a[href|="/rainbowrocks"],a[href|="/egc20"],a[href|="/pinkierocks"],a[href|="/regc00"],a[href|="/rtwilightrocks"],a[href|="/regc10"],a[href|="/rrainbowrocks"],a[href|="/regc20"],a[href|="/rpinkierocks"],a[href|="/egc01"],a[href|="/zapreally"],a[href|="/egc11"],a[href|="/airguitar"],a[href|="/egc21"],a[href|="/imontoyou"],a[href|="/egc02"],a[href|="/sugarright"],a[href|="/egc12"],a[href|="/toolatenow"],a[href|="/egc22"],a[href|="/adagiogirl"],a[href|="/egc03"],a[href|="/ariagirl"],a[href|="/egc13"],a[href|="/sonatagirl"],a[href|="/egc23"],a[href|="/incorrect"],a[href|="/egc04"],a[href|="/hppshrug"],a[href|="/egc14"],a[href|="/hraritywhy"],a[href|="/egc24"],a[href|="/wonderdash"],a[href|="/egc05"],a[href|="/rarimallow"],a[href|="/egc15"],a[href|="/flutterflattered"],a[href|="/egc25"],a[href|="/sunsetlook"],a[href|="/egc06"],a[href|="/sunsetdaww"],a[href|="/egc16"],a[href|="/starlightgirl"] {
+a[href|="/egc00"],a[href|="/twilightrocks"],a[href|="/egc10"],a[href|="/rainbowrocks"],a[href|="/egc20"],a[href|="/pinkierocks"],a[href|="/regc00"],a[href|="/rtwilightrocks"],a[href|="/regc10"],a[href|="/rrainbowrocks"],a[href|="/regc20"],a[href|="/rpinkierocks"],a[href|="/egc01"],a[href|="/zapreally"],a[href|="/egc11"],a[href|="/airguitar"],a[href|="/egc21"],a[href|="/imontoyou"],a[href|="/egc02"],a[href|="/sugarright"],a[href|="/egc12"],a[href|="/toolatenow"],a[href|="/egc22"],a[href|="/adagiogirl"],a[href|="/egc03"],a[href|="/ariagirl"],a[href|="/egc13"],a[href|="/sonatagirl"],a[href|="/egc23"],a[href|="/incorrect"],a[href|="/cinch"],a[href|="/egc04"],a[href|="/hppshrug"],a[href|="/egc14"],a[href|="/hraritywhy"],a[href|="/egc24"],a[href|="/wonderdash"],a[href|="/egc05"],a[href|="/rarimallow"],a[href|="/egc15"],a[href|="/flutterflattered"],a[href|="/egc25"],a[href|="/sunsetlook"],a[href|="/egc06"],a[href|="/sunsetdaww"],a[href|="/egc16"],a[href|="/starlightgirl"] {
   display: block;
   clear: none;
   float: left;
@@ -1495,7 +1495,7 @@ a[href|="/egc12"],a[href|="/toolatenow"] {background-position: -70px -140px}
 a[href|="/egc22"],a[href|="/adagiogirl"] {background-position: -140px -140px}
 a[href|="/egc03"],a[href|="/ariagirl"] {background-position: 0 -210px}
 a[href|="/egc13"],a[href|="/sonatagirl"] {background-position: -70px -210px}
-a[href|="/egc23"],a[href|="/incorrect"] {background-position: -140px -210px}
+a[href|="/egc23"],a[href|="/incorrect"],a[href|="/cinch"] {background-position: -140px -210px}
 a[href|="/egc04"],a[href|="/hppshrug"] {background-position: 0 -280px}
 a[href|="/egc14"],a[href|="/hraritywhy"] {background-position: -70px -280px}
 a[href|="/egc24"],a[href|="/wonderdash"] {background-position: -140px -280px}
